gcc/testsuite/gcc.target/mips/abi-o64-long64-pic.c
/* { dg-options "-mabi=o64 -mlong64 -fpic" } */
/* { dg-error "is incompatible with" "" { target *-*-* } 0 } */
#include "abi-main.h"
